--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -4,8 +4,33 @@ parameters:
   - name: workingDir
     type: string
     default: $(System.DefaultWorkingDirectory)
+  - name: nodeVersion
+    default: ''
 
 steps:
+
+  - task: NodeTool@0
+    displayName: "Use Node ${{ parameters.nodeVersion }}"
+    inputs:
+      versionSpec: ${{ parameters.nodeVersion }}
+      checkLatest: true
+
+  - script: |
+      git config --local user.email imodeljs-admin@users.noreply.github.com
+      git config --local user.name imodeljs-admin
+    displayName: git config
+
+  - powershell: |
+      # Get the new version number.
+      $json = Get-Content -Raw -Path common/config/rush/version-policies.json | ConvertFrom-Json
+      $currVersion = $json[0].version
+
+      $newBuildNumber = $currVersion + "_$(Build.BuildNumber)"
+
+      Write-Host "##vso[build.updatebuildnumber]$newBuildNumber"
+    displayName: Set build number
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+
   - script: node common/scripts/install-run-rush.js check
     displayName: rush check
     workingDirectory: ${{ parameters.workingDir }}
@@ -58,3 +83,10 @@ steps:
   - script: node common/scripts/install-run-rush.js docs
     displayName: rush docs
     workingDirectory: ${{ parameters.workingDir }}
+
+  # Will run if even there is a failure somewhere else in the pipeline.
+#     - template: ../templates/publish-test-results.yaml
+#       parameters:
+#         NodeVersion: ${{ parameters.nodeVersion }}
+  # The publish script identifies any new packages not previously published and tags the build
+#     - template: ../templates/publish.yaml
