set tempDocsLocation variable

--- a/common/config/azure-pipelines/templates/docs-build.yaml
+++ b/common/config/azure-pipelines/templates/docs-build.yaml
@@ -10,10 +10,14 @@ parameters:
     default: $(System.ArtifactsDirectory)/staging
   - name: outputDir
     type: string
-    default: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    default: $(Pipeline.Workspace)/tempDocsBuild/public_build
   - name: downloadCurrentBuildArtifacts
     type: boolean
     default: false
+
+variables:
+  - name: tempDocsLocation
+    value: $(Pipeline.Workspace)/tempDocsBuild
 
 steps:
   - checkout: self
