--- a/core/bentley/package.json
+++ b/core/bentley/package.json
@@ -39,7 +39,7 @@
     "@types/chai": "4.3.1",
     "@types/chai-as-promised": "^7",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "eslint": "^7.11.0",
