--- a/core/ecschema-editing/package.json
+++ b/core/ecschema-editing/package.json
@@ -47,7 +47,7 @@
     "@types/chai": "4.3.1",
     "@types/chai-as-promised": "^7",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "@types/sinon": "^9.0.0",
     "@xmldom/xmldom": "^0.7.0",
     "benchmark": "^2.1.4",
