--- a/core/ecschema-locaters/package.json
+++ b/core/ecschema-locaters/package.json
@@ -41,7 +41,7 @@
     "@types/fs-extra": "^4.0.7",
     "@types/glob": "^5.0.35",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "@types/sinon": "^9.0.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
