--- a/core/transformer/package.json
+++ b/core/transformer/package.json
@@ -57,7 +57,7 @@
     "@types/chai": "4.3.1",
     "@types/chai-as-promised": "^7",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "@types/semver": "7.3.10",
     "@types/sinon": "^9.0.0",
     "chai": "^4.1.2",
