--- a/core/webgl-compatibility/package.json
+++ b/core/webgl-compatibility/package.json
@@ -44,7 +44,7 @@
     "@itwin/eslint-plugin": "workspace:*",
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "glob": "^7.1.2",
