--- a/presentation/opentelemetry/package.json
+++ b/presentation/opentelemetry/package.json
@@ -57,7 +57,7 @@
     "@opentelemetry/semantic-conventions": "^1.5.0",
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "cpx2": "^3.0.0",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
