--- a/ui/appui-react/package.json
+++ b/ui/appui-react/package.json
@@ -89,7 +89,7 @@
     "@types/faker": "^4.1.0",
     "@types/lodash": "^4.14.0",
     "@types/mocha": "^8.2.2",
-    "@types/node": "18.7.18",
+    "@types/node": "^18.7.18",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
