move tempDocsLocation to job level variable

--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -24,11 +24,13 @@ stages:
         pool:
           name: iModelTechCI
           demands: Agent.OS -equals Windows_NT
+        variables:
+          tempDocsLocation: $(Pipeline.Workspace)/tempDocsBuild
         steps:
           - template: ./templates/docs-build.yaml
             parameters:
               workingDir: $(Pipeline.Workspace)/itwinjs-core
-              outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+              outputDir: $(tempDocsLocation)/public_build
 
   # - stage: CreateOctopusRelease
   #   displayName: Create Octopus release
