--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -12,12 +12,53 @@ pr:
       - master
       - release/*
 
+# jobs:
+#   - template: ci-core.yaml
+#     parameters:
+#       name: Node_16
+#       nodeVersion: 16.13.0
+#       pool:
+#         name: $(name)
+#         demands:
+#           - Agent.OS -equals $(platform)
+
 jobs:
-  - template: ci-core.yaml
-    parameters:
-      name: Node_16
-      nodeVersion: 16.13.0
-      pool:
-        name: $(name)
-        demands:
-          - Agent.OS -equals $(platform)
+- job:
+  variables:
+  - name: linuxPool
+    value: 'iModeljs Linux'
+  - name: mac_pool
+    value: iModelTechCI
+  - name: win_pool
+    value: iModelTechCI
+
+  strategy:
+    matrix:
+      "Windows_Node_16":
+        OS: windows-latest
+        platform: Windows_NT
+        name: $(win_pool)
+      "Linux_Node_16":
+        OS: ubuntu-latest
+        platform: Linux
+        name: $(linux_pool)
+      "MacOS_Node_16":
+        OS: macOS-latest
+        platform: Darwin
+        name: $(mac_pool)
+
+  pool:
+    name: $(name)
+    demands:
+      - Agent.OS -equals $(platform)
+
+  timeoutInMinutes: 120
+
+  workspace:
+    clean: all
+
+  steps:
+  - checkout: self
+  - template: jobs/ci-core.yaml
+      parameters:
+        nodeVersion: 16.13.0
