--- a/common/config/azure-pipelines/ci.yaml
+++ b/common/config/azure-pipelines/ci.yaml
@@ -66,7 +66,7 @@ jobs:
 
   steps:
   - checkout: self
-  - template: jobs/ci-core.yaml
+  - template: templates/core-build.yaml
       parameters:
         nodeVersion: 16.13.0
 
