--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -59,6 +59,6 @@ jobs:
 
   steps:
   - checkout: self
-  - template: jobs/ci-core.yaml
+  - template: templates/core-build.yaml
       parameters:
         nodeVersion: 16.13.0
