--- a/core/geometry/package.json
+++ b/core/geometry/package.json
@@ -41,7 +41,7 @@
     "@types/chai": "4.3.1",
     "@types/flatbuffers": "~1.10.0",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "chai": "^4.1.2",
     "debug": "^2.6.9",
     "eslint": "^7.11.0",
