--- a/core/orbitgt/package.json
+++ b/core/orbitgt/package.json
@@ -36,7 +36,7 @@
     "@itwin/eslint-plugin": "workspace:*",
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "chai": "^4.1.2",
     "cpx2": "^3.0.0",
     "debug": "^2.6.9",
