--- a/core/telemetry/package.json
+++ b/core/telemetry/package.json
@@ -42,7 +42,7 @@
     "@itwin/eslint-plugin": "workspace:*",
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
