--- a/domains/physical-material/backend/package.json
+++ b/domains/physical-material/backend/package.json
@@ -49,7 +49,7 @@
     "@types/chai": "4.3.1",
     "@types/fs-extra": "^4.0.7",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
