--- a/extensions/geonames/package.json
+++ b/extensions/geonames/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "cpx2": "^3.0.0",
     "eslint": "^7.11.0",
     "rimraf": "^3.0.2",
