--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -49,7 +49,7 @@
     "@types/express": "^4.16.1",
     "@types/lodash": "^4.14.0",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^18.7.18",
+    "@types/node": "16.11.59",
     "@types/uuid": "^7.0.2",
     "@types/yargs": "^17.0.10",
     "electron": "^17.0.0",
