--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -81,7 +81,6 @@
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
-    "@types/google-protobuf": "~3.15.6",
     "source-map-loader": "^4.0.0",
     "typescript": "~4.4.0",
     "webpack": "^5.64.4"
@@ -102,8 +101,7 @@
     "semver": "^7.3.5",
     "superagent": "7.1.3",
     "wms-capabilities": "0.4.0",
-    "xml-js": "~1.6.11",
-    "google-protobuf": "~3.20.1"
+    "xml-js": "~1.6.11"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc"
