Add setup for testing Electron backend code (#4155)
* Setup for testing ElectronHost.

* Use 'inherit' instead of 'pipe' for stdio.

* 'rush update' after merge.

* Rework tests structure.

* Rename files, add comments.

* rush change

* Lint fix.

* Rename 'test:backend' script to 'test:integration'.

Co-authored-by: Paul Connelly <22944042+pmconne@users.noreply.github.com>

* Add tests to integration test pipeline script.

Co-authored-by: Gytis Cepkauskas <GytisCepk@users.noreply.github.com>
Co-authored-by: Paul Connelly <22944042+pmconne@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1507,6 +1507,27 @@
         "generate"
       ],
     },
+    {
+      "name": "Electron Backend Tests",
+      "presentation": {
+        "group": "0_CoreTests"
+      },
+      "cwd": "${workspaceFolder}/core/electron/",
+      "type": "pwa-node",
+      "request": "launch",
+      "program": "${workspaceFolder}/core/electron/node_modules/mocha/bin/_mocha",
+      "args": [
+        "lib/cjs/test/backend/RunElectronBackendTests.js"
+      ],
+      "env": {
+        "NODE_ENV": "development"
+      },
+      "outFiles": [
+        "${workspaceFolder}/core/electron/lib/**/*.js",
+        "${workspaceFolder}/core/backend/lib/**/*.js"
+      ],
+      "autoAttachChildProcesses": true
+    },
   ],
   "compounds": [
     {
