--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -22,21 +22,13 @@ pr:
     exclude:
       - .github/CODEOWNERS
 
+# resources:
+#   pipelines:
+#     pipeline: bis-docs
+
 jobs:
-  - job:
-    workspace:
-      clean: all
-    pool:
-      name: iModelTechCI
-      demands: Agent.OS -equals Windows_NT
-
-    steps:
-      - template: ../templates/docs-build.yaml
-        parameters:
-          workingDir: $(Pipeline.Workspace)/itwinjs-core
-          outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-
-      - publish: $(Agent.BuildDirectory)/tempDocsBuild/
-        artifact: DocsBuild
-        displayName: Publish Pipeline Artifact - DocsBuild
-        condition: and(succeeded(), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
+- template: ./docs/docs-build.yaml
+  parameters:
+    workingDir: $(Pipeline.Workspace)/itwinjs-core
+    outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    shouldPublish: or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))
