--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,14 +9,7 @@
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
 
-* @iTwin/itwinjs-core-admins
-
-.github/workflows  @calebmshafer @wgoehrig @ColinKerr
-.github/CODEOWNERS @iTwin/itwinjs-core-admins
-
-.gitattributes  @iTwin/itwinjs-core-admins
-.gitignore      @iTwin/itwinjs-core-admins
-rush.json       @iTwin/itwinjs-core-admins
+* @iTwin/itwinjs-core-ui
 
 # The syntax used below tries to cover both files and folders in the common folder that operate per=package
 # Due to syntax requirements, both can't be covered in a single line
@@ -25,157 +18,3 @@ rush.json       @iTwin/itwinjs-core-admins
 #   1. /common/api/{packageName}.api.md
 #   1. /common/api/summary/{packageName}.exports.csv
 #   1. /common/changes/@itwin/{packageName}/*.json
-
-/common/**/analytical-backend.*               @calebmshafer @diegoalexdiaz
-/common/**/analytical-backend/                @calebmshafer @diegoalexdiaz
-/common/**/backend-webpack-tools/             @calebmshafer @wgoehrig
-/common/**/core-bentley.*                     @iTwin/itwinjs-core-admins
-/common/**/core-bentley/                      @iTwin/itwinjs-core-admins
-/common/**/build-tools/                       @calebmshafer @wgoehrig
-/common/**/certa/                             @calebmshafer @wgoehrig
-
-/common/**/*-extension/                       @aruniverse @calebmshafer
-
-/common/**/ecschema-*.*                       @calebmshafer @ColinKerr @wgoehrig
-/common/**/ecschema-*/                        @calebmshafer @ColinKerr @wgoehrig
-/common/**/ecschema2ts.*                      @calebmshafer @ColinKerr @wgoehrig
-/common/**/ecschema2ts/                       @calebmshafer @ColinKerr @wgoehrig
-/common/**/core-electron.*                    @wgoehrig
-/common/**/core-electron/                     @wgoehrig
-/common/**/eslint-plugin/                     @calebmshafer @paulius-valiunas
-/common/**/express-server.*                   @calebmshafer @wgoehrig
-/common/**/express-server/                    @calebmshafer @wgoehrig
-/common/**/frontend-devtools.*                @iTwin/itwinjs-core-display @Ellord207
-/common/**/frontend-devtools/                 @iTwin/itwinjs-core-display @Ellord207
-/common/**/core-geometry.*                    @bbastings @mgooding @dassaf4
-/common/**/core-geometry/                     @bbastings @mgooding @dassaf4
-/common/**/hypermodeling-frontend.*           @iTwin/itwinjs-core-display @bbastings
-/common/**/hypermodeling-frontend/            @iTwin/itwinjs-core-display @bbastings
-/common/**/core-backend.*                     @iTwin/itwinjs-core-admins
-/common/**/core-backend/                      @iTwin/itwinjs-core-admins
-/common/**/core-transformer.*                 @MichaelBelousov @ColinKerr
-/common/**/core-transformer/                  @MichaelBelousov @ColinKerr
-/common/**/core-common.*                      @iTwin/itwinjs-core-admins @iTwin/itwinjs-core-display
-/common/**/core-common/                       @iTwin/itwinjs-core-admins @iTwin/itwinjs-core-display
-/common/**/editor-*.*                         @bbastings @kabentley @pmconne
-/common/**/editor-*/                          @bbastings @kabentley @pmconne
-/common/**/core-extension.*                   @calebmshafer @wgoehrig @aruniverse @kckst8 @johnnyd710
-/common/**/core-extension/                    @calebmshafer @wgoehrig @aruniverse @kckst8 @johnnyd710
-/common/**/core-frontend.*                    @kabentley @bbastings @iTwin/itwinjs-core-display
-/common/**/core-frontend/                     @kabentley @bbastings @iTwin/itwinjs-core-display
-/common/**/core-i18n.*                        @calebmshafer @wgoehrig
-/common/**/core-i18n/                         @calebmshafer @wgoehrig
-/common/**/core-markup.*                      @kabentley @pmconne @bbastings
-/common/**/core-markup/                       @kabentley @pmconne @bbastings
-/common/**/core-quantity.*                    @calebmshafer @ColinKerr
-/common/**/core-quantity/                     @calebmshafer @ColinKerr
-/common/**/linear-referencing-backend.*       @calebmshafer @diegoalexdiaz
-/common/**/linear-referencing-backend/        @calebmshafer @diegoalexdiaz
-/common/**/linear-referencing-common.*        @calebmshafer @diegoalexdiaz
-/common/**/linear-referencing-common/         @calebmshafer @diegoalexdiaz
-/common/**/map-layers/                        @mdastous-bentley @MarcBedard8
-/common/**/core-orbitgt.*                     @iTwin/itwinjs-core-display
-/common/**/core-orbitgt/                      @iTwin/itwinjs-core-display
-/common/**/perf-tools.*                       @calebmshafer @wgoehrig
-/common/**/perf-tools/                        @calebmshafer @wgoehrig
-/common/**/physical-material-backend.*        @bbastings @jchick-bentley
-/common/**/physical-material-backend/         @bbastings @jchick-bentley
-/common/**/presentation-*.*                   @iTwin/itwinjs-core-presentation
-/common/**/presentation-*/                    @iTwin/itwinjs-core-presentation
-/common/**/rpcinterface-full-stack-tests/     @calebmshafer @wgoehrig
-/common/**/appui-*.*                          @iTwin/itwinjs-core-ui
-/common/**/appui-*/                           @iTwin/itwinjs-core-ui
-/common/**/*-react.*                          @iTwin/itwinjs-core-ui
-/common/**/*-react/                           @iTwin/itwinjs-core-ui
-/common/**/webgl-compatibility.*              @iTwin/itwinjs-core-display @Ellord207
-/common/**/webgl-compatibility/               @iTwin/itwinjs-core-display @Ellord207
-/common/**/core-webpack-tools/                @aruniverse @calebmshafer @wgoehrig
-
-/common/config/azure-pipelines  @calebmshafer @wgoehrig @ColinKerr
-
-/core/backend                   @iTwin/itwinjs-core-admins
-/core/bentley                   @iTwin/itwinjs-core-admins
-/core/common                    @iTwin/itwinjs-core-admins @iTwin/itwinjs-core-display
-/core/common/src/rpc/IModelTileRpcInterface.ts    @pmconne
-/core/ecschema-*                @calebmshafer @ColinKerr @wgoehrig
-/core/electron                  @wgoehrig @ramanujam-raman
-/core/express-server            @calebmshafer @wgoehrig
-/core/extension                 @calebmshafer @wgoehrig @aruniverse @kckst8 @johnnyd710
-/core/frontend                  @kabentley @bbastings @iTwin/itwinjs-core-display
-/core/frontend/src/extension    @calebmshafer @wgoehrig @aruniverse @kckst8 @johnnyd710
-/core/frontend-devtools         @iTwin/itwinjs-core-display @Ellord207
-/core/geometry                  @bbastings @mgooding @dassaf4
-/core/hypermodeling             @bbastings @iTwin/itwinjs-core-display
-/core/i18n                      @wgoehrig @calebmshafer
-/core/markup                    @kabentley @pmconne @bbastings
-/core/mobile                    @iTwin/itwinjs-core-admins
-/core/orbitgt                   @iTwin/itwinjs-core-display
-/core/quantity                  @calebmshafer @ColinKerr
-/core/transformer               @MichaelBelousov @ColinKerr
-/core/webgl-compatibility       @iTwin/itwinjs-core-display @Ellord207
-
-/docs   @iTwin/itwinjs-core
-/docs/getting-started @iTwin/itwinjs-core-admins @williamkbentley
-/docs/config          @iTwin/itwinjs-core-admins @williamkbentley
-/docs/presentation    @iTwin/itwinjs-core-presentation
-
-# These domains should be split up a bit more
-/domains                      @iTwin/itwinjs-core-admins
-/domains/analytical           @calebmshafer @diegoalexdiaz
-/domains/linear-referencing   @calebmshafer @diegoalexdiaz
-/domains/physical-material    @bbastings @jchick-bentley
-
-/editor                               @bbastings @kabentley @pmconne
-
-/example-code                         @iTwin/itwinjs-core-admins
-
-/extensions                           @aruniverse @calebmshafer
-/extensions/test-extension            @aruniverse @calebmshafer @wgoehrig
-/extensions/map-layers                @mdastous-bentley @MarcBedard8
-
-/full-stack-tests/core                @iTwin/itwinjs-core-admins
-/full-stack-tests/ecschema-rpc-interface @calebmshafer @ColinKerr @wgoehrig
-/full-stack-tests/presentation  @iTwin/itwinjs-core-presentation
-/full-stack-tests/rpc           @calebmshafer @wgoehrig @swbsi
-/full-stack-tests/rpc-interface @calebmshafer @wgoehrig
-
-/presentation                   @iTwin/itwinjs-core-presentation
-/presentation/common/src/presentation-common/PresentationRpcInterface.ts @grigasp
-
-/test-apps/display-performance-test-app     @iTwin/itwinjs-core-display @hnn0003
-/test-apps/display-test-app                 @bbastings @kabentley @iTwin/itwinjs-core-display
-/test-apps/export-gltf                      @mgooding @MichaelBelousov
-/test-apps/export-obj                       @mgooding @MichaelBelousov
-/test-apps/imjs-importer                    @bbastings @dassaf4
-/test-apps/imodel-from-geojson              @mgooding @pmconne
-/test-apps/imodel-from-orbitgt              @iTwin/itwinjs-core-display
-/test-apps/imodel-from-reality-model        @iTwin/itwinjs-core-display
-/test-apps/imodel-transformer               @MichaelBelousov @ColinKerr
-/test-apps/ninezone-test-app                @iTwin/itwinjs-core-ui
-/test-apps/presentation-test-app            @iTwin/itwinjs-core-presentation
-/test-apps/synchro-schedule-importer        @iTwin/itwinjs-core-display
-/test-apps/ui-test-app                      @iTwin/itwinjs-core-ui
-/test-apps/ui-items-providers-test          @iTwin/itwinjs-core-ui
-
-/tools/backend-webpack @calebmshafer @wgoehrig
-/tools/build @calebmshafer @wgoehrig
-/tools/certa @calebmshafer @wgoehrig
-/tools/webpack-core @calebmshafer @wgoehrig @aruniverse
-/tools/ecschema2ts @calebmshafer @ColinKerr @wgoehrig
-/tools/eslint-plugin @calebmshafer @paulius-valiunas
-/tools/internal @calebmshafer @wgoehrig
-/tools/perf-tools @calebmshafer @wgoehrig
-
-/ui @iTwin/itwinjs-core-ui
-/ui/components/src/components-react/properties   @iTwin/itwinjs-core-ui @iTwin/itwinjs-core-presentation
-/ui/components/src/components-react/propertygrid @iTwin/itwinjs-core-ui @iTwin/itwinjs-core-presentation
-/ui/components/src/components-react/tree         @iTwin/itwinjs-core-ui @iTwin/itwinjs-core-presentation
-
-# These are at the end to override all previous reviews
-
-## Updates to the package.json should avoid requesting review by everyone
-## If the version updates or
-/**/package.json    @iTwin/itwinjs-core
-/**/CHANGELOG.json  @iTwin/itwinjs-core
-/**/CHANGELOG.md    @iTwin/itwinjs-core
-/**/LICENSE.md      @iTwin/itwinjs-core-admins
