add some missing deps

--- a/core/electron/package.json
+++ b/core/electron/package.json
@@ -41,13 +41,16 @@
   },
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
+    "@types/chai": "4.3.1",
     "@itwin/core-backend": "workspace:*",
     "@itwin/core-bentley": "workspace:*",
     "@itwin/core-common": "workspace:*",
     "@itwin/core-frontend": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
-    "@itwin/presentation-common": "workspace:*",
+    "@types/mocha": "^8.2.2",
     "@types/node": "18.7.7",
+    "@itwin/presentation-common": "workspace:*",
+    "chai": "^4.1.2",
     "electron": "^17.0.0",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
