--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -18,7 +18,6 @@ parameters:
     type: boolean
     default: false
 
-
 jobs:
   - job:
     workspace:
@@ -86,24 +85,24 @@ jobs:
       # Extra stuff
 
       - task: DownloadPipelineArtifact@2
-        displayName: 'Download Pipeline Artifact - Nuget Spec'
+        displayName: "Download Pipeline Artifact - Nuget Spec"
         inputs:
           buildType: specific
-          project: '2c48216e-e72f-48b4-a4eb-40ff1c04e8e4'
+          project: "2c48216e-e72f-48b4-a4eb-40ff1c04e8e4"
           definition: 1830
           buildVersionToDownload: specific
           pipelineId: 1234689
 
       - task: qetza.replacetokens.replacetokens-task.replacetokens@3
-        displayName: 'Replace tokens in NugetPackage.nuspec'
+        displayName: "Replace tokens in NugetPackage.nuspec"
         inputs:
           targetFiles: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
 
-      - script: 'cat $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
+      - script: 'type $(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
         displayName: Debug nuspec
 
       - task: DeleteFiles@1
-        displayName: 'Delete landing page '
+        displayName: "Delete landing page "
         inputs:
           SourceFolder: '$(tempDocsLocation)\public_build'
           Contents: index.html
@@ -116,7 +115,7 @@ jobs:
         displayName: Debug build contents
 
       - task: NuGetCommand@2
-        displayName: 'NuGet pack'
+        displayName: "NuGet pack"
         inputs:
           command: pack
           packagesToPack: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
