Add CI build of display-test-app iOS swift code (#4183)
* Add build of display-test-app iOS swift code to fast-ci build

Co-authored-by: Arun George <11051042+aruniverse@users.noreply.github.com>

--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -28,6 +28,7 @@ jobs:
     parameters:
       name: Node_16
       nodeVersion: 16.13.0
+      buildIos: true
       pool:
         name: $(name)
         demands:
