--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -2,6 +2,7 @@ parameters:
   name: ''
   pool: ''
   nodeVersion: ''
+  buildIos: false
 
 jobs:
 - job:
@@ -53,6 +54,8 @@ jobs:
       condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
     - template: ../templates/core-build.yaml
+      parameters:
+        buildIos: ${{ parameters.buildIos}}
 
     # Will run if even there is a failure somewhere else in the pipeline.
     - template: ../templates/publish-test-results.yaml
