add build vars for nuget

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -121,3 +121,5 @@ jobs:
           command: pack
           packagesToPack: '$(Pipeline.Workspace)\DocsNugetSpecFile\NugetPackage.nuspec'
           versioningScheme: byBuildNumber
+          configuration: Release
+          packDestination: '$(Build.ArtifactStagingDirectory)'
