use backslash in tempDocsLocation variable

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -26,7 +26,7 @@ jobs:
       name: iModelTechCI
       demands: Agent.OS -equals Windows_NT
     variables:
-      tempDocsLocation: $(Pipeline.Workspace)/tempDocsBuild
+      tempDocsLocation: $(Pipeline.Workspace)\tempDocsBuild
     steps:
       - checkout: self
         path: itwinjs-core
