--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -14,14 +14,27 @@ name: $(Date:yyyyMMdd).$(Rev:r).$(Build.BuildId)
 
 # Pull in artifacts
 
+resources:
+  pipelines:
+  - pipeline: itwinjs-docs
+    source: iTwin.js Docs
+    trigger:
+      branches:
+        include:
+        - master
+        - release/*
+        - docs-release-pipeline
+        exclude:
+        - release/2*
+        - release/1*
+      tags:
+      - iTwinJsDocsRelease
+
 stages:
   - stage: Build
     displayName: Build Docs
     jobs:
-    - template: ./jobs/docs/docs-build.yaml
-      parameters:
-        workingDir: $(Pipeline.Workspace)/itwinjs-core
-        outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    - template: ./jobs/docs/package-docs.yaml
 
   # - stage: CreateOctopusRelease
   #   displayName: Create Octopus release
