--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -22,13 +22,10 @@ pr:
     exclude:
       - .github/CODEOWNERS
 
-# resources:
-#   pipelines:
-#     pipeline: bis-docs
-
 jobs:
 - template: ./docs/docs-build.yaml
   parameters:
     workingDir: $(Pipeline.Workspace)/itwinjs-core
     outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-    shouldPublish: or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))
+    # shouldPublish: and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
+    shouldPublish: true
