--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -17,7 +17,7 @@ name: $(Date:yyyyMMdd).$(Rev:r).$(Build.BuildId)
 resources:
   pipelines:
   - pipeline: itwinjs-docs
-    source: iTwin.js Docs
+    source: iTwin.js Docs - YAML
     trigger:
       branches:
         include:
