--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1481,6 +1481,48 @@
         "[BACKEND] Local Backend for Full Stack RPC Interface Tests"
       ]
     },
+    { /* PARTIAL */
+      "name": "[BACKEND] Electron Frontend Integration Tests",
+      "presentation": {
+        "hidden": true
+      },
+      "cwd": "${workspaceFolder}/core/electron/",
+      "type": "pwa-node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "run",
+        "test:integration:frontend",
+        "--",
+        "--debug"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/{core}/*/lib/**/*.js",
+        "${workspaceFolder}/tools/certa/lib/**/*.js"
+      ],
+      "outputCapture": "std",
+      "attachSimplePort": 5858, // NB: This must match ports.debugging in core/electron/src/test/frontend/utils/certa.json
+      "cascadeTerminateToConfigurations": [
+        "[FRONTEND] Electron Frontend Integration Tests"
+      ]
+    },
+    { /* PARTIAL */
+      "name": "[FRONTEND] Electron Frontend Integration Tests",
+      "presentation": {
+        "hidden": true
+      },
+      "type": "pwa-chrome",
+      "request": "attach",
+      "port": 9223, // NB: This must match ports.frontendDebugging in core/electron/src/test/frontend/utils/certa.json
+      "timeout": 60000,
+      "outFiles": [
+        "${workspaceFolder}/{core}/*/lib/**/*.js",
+        "${workspaceFolder}/tools/certa/lib/**/*.js"
+      ],
+      "cascadeTerminateToConfigurations": [
+        "[BACKEND] Electron Frontend Integration Tests"
+      ]
+    },
     {
       "name": "eslint rule test @bentley/no-internal-barrel-imports",
       "presentation": {
@@ -1508,7 +1550,7 @@
       ],
     },
     {
-      "name": "Electron Backend Tests",
+      "name": "Electron Backend Integration Tests",
       "presentation": {
         "group": "0_CoreTests"
       },
@@ -1749,6 +1791,16 @@
       "configurations": [
         "[NODE] Certa Test Runner for Clients Tests",
         "[BROWSER] Clients Tests"
+      ]
+    },
+    {
+      "name": "Electron Frontend Integration Tests",
+      "presentation": {
+        "group": "0_CoreTests"
+      },
+      "configurations": [
+        "[FRONTEND] Electron Frontend Integration Tests",
+        "[BACKEND] Electron Frontend Integration Tests"
       ]
     },
   ],
