--- a/core/electron/package.json
+++ b/core/electron/package.json
@@ -15,7 +15,10 @@
     "extract-api": "betools extract-api --entry=__DOC_ONLY__",
     "lint": "eslint -f visualstudio \"./src/**/*.ts\" 1>&2",
     "test": "",
-    "test:integration": "mocha lib/cjs/test/backend/RunElectronBackendTests.js",
+    "test:integration": "npm run -s webpack:frontend-test && npm run test:integration:backend && npm run test:integration:frontend",
+    "test:integration:frontend": "certa -r electron --config src/test/frontend/utils/certa.json",
+    "test:integration:backend": "mocha --config src/test/backend/.mocharc.json",
+    "webpack:frontend-test": "webpack --config ./src/test/frontend/utils/webpack.config.js 1>&2",
     "cover": ""
   },
   "repository": {
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
+    "@itwin/certa": "workspace:*",
     "@itwin/core-backend": "workspace:*",
     "@itwin/core-bentley": "workspace:*",
     "@itwin/core-common": "workspace:*",
@@ -55,7 +59,9 @@
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.4.0"
+    "source-map-loader": "^4.0.0",
+    "typescript": "~4.4.0",
+    "webpack": "^5.64.4"
   },
   "dependencies": {
     "@openid/appauth": "^1.2.6",
