wip: i18n test failures

--- a/common/config/azure-pipelines/integration-pr-validation.yaml
+++ b/common/config/azure-pipelines/integration-pr-validation.yaml
@@ -30,8 +30,7 @@ jobs:
   - job: Node_18_x
     condition: succeeded()
     pool:
-      # vmImage: ubuntu-latest
-      vmImage: windows-latest
+      vmImage: ubuntu-latest
     steps:
       - template: templates/integration-test-steps.yaml
         parameters:
