added example code snippet

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -199,6 +199,10 @@
       "allowedCategories": [ "backend", "internal", "tools" ]
     },
     {
+      "name": "@itwin/ecschema-editing",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "@itwin/ecschema-locaters",
       "allowedCategories": [ "tools" ]
     },
@@ -428,7 +432,7 @@
     },
     {
       "name": "@xmldom/xmldom",
-      "allowedCategories": [ "backend", "common", "tools" ]
+      "allowedCategories": [ "backend", "common", "internal", "tools" ]
     },
     {
       "name": "almost-equal",
