--- a/presentation/opentelemetry/package.json
+++ b/presentation/opentelemetry/package.json
@@ -51,7 +51,7 @@
     "@itwin/build-tools": "workspace:*",
     "@itwin/eslint-plugin": "workspace:*",
     "@itwin/presentation-common": "workspace:*",
-    "@opentelemetry/api": "^1.0.4",
+    "@opentelemetry/api": "1.0.4",
     "@opentelemetry/resources": "^1.5.0",
     "@opentelemetry/sdk-trace-base": "^1.5.0",
     "@opentelemetry/semantic-conventions": "^1.5.0",
