--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "regEx",
+      "presentation": {
+        "group": "0_CoreTests",
+        "order": 1
+      },
+      // extensions/map-layers-auth/src/ArcGis/ArcGisAccessClient.ts
+      "cwd": "${workspaceFolder}/clients/imodelhub/",
+      "type": "pwa-node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "test"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/clients/imodelhub/lib/**/*.js"
+      ]
+    },
+    {
       "name": "Attach to node process",
       "presentation": {
         "group": "__TOP__"
