--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -31,6 +31,7 @@
     "url": "http://www.bentley.com"
   },
   "dependencies": {
+    "canonical-path": "^1.0.0",
     "detect-port": "~1.3.0",
     "express": "^4.16.3",
     "jsonc-parser": "~2.0.3",
