--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -475,6 +475,10 @@
       "allowedCategories": [ "frontend" ]
     },
     {
+      "name": "canonical-path",
+      "allowedCategories": [ "tools" ]
+    },
+    {
       "name": "case-sensitive-paths-webpack-plugin",
       "allowedCategories": [ "tools" ]
     },
