--- a/common/config/azure-pipelines/jobs/docs/package-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/package-docs.yaml
@@ -67,3 +67,18 @@ jobs:
           versioningScheme: byBuildNumber
           configuration: Release
           packDestination: '$(Build.ArtifactStagingDirectory)'
+
+      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-push.OctopusPush@3
+        displayName: 'Push package to Octopus'
+        inputs:
+          OctoConnectedServiceName: 'Prod Octopus'
+          Package: '$(System.ArtifactsDirectory)\$(Release.PrimaryArtifactSourceAlias)\iModeljsDocumentationFiles_$(Build.BuildNumber)\iModeljs.Documentation.$(Build.BuildNumber).nupkg'
+          Replace: false
+
+      - task: octopusdeploy.octopus-deploy-build-release-tasks.octopus-create-release.OctopusCreateRelease@3
+        displayName: '[DEPRECATED] Create Octopus Release: $(octopusProjectName)'
+        inputs:
+          OctoConnectedServiceName: 'Prod Octopus'
+          ProjectName: '$(octopusProjectName)'
+          ReleaseNumber: '$(Build.BuildNumber)'
+          AdditionalArguments: '--deploymenttimeout=01:00:00 --packageversion $(Build.BuildNumber)'
