--- a/core/backend/package.json
+++ b/core/backend/package.json
@@ -92,9 +92,13 @@
   "dependencies": {
     "@azure/storage-blob": "^12.7.0",
     "@bentley/imodeljs-native": "3.4.12",
+    "@itwin/object-storage-azure": "1.0.0",
+    "@itwin/cloud-agnostic-core": "1.0.0",
+    "@itwin/object-storage-core": "1.0.0",
     "@itwin/core-telemetry": "workspace:*",
     "form-data": "^2.3.2",
     "fs-extra": "^8.1.0",
+    "inversify": "~5.0.1",
     "json5": "^2.2.0",
     "js-base64": "^3.6.1",
     "multiparty": "^4.2.1",
