--- a/core/common/package.json
+++ b/core/common/package.json
@@ -35,6 +35,7 @@
     "url": "http://www.bentley.com"
   },
   "dependencies": {
+    "@itwin/object-storage-core": "1.0.0",
     "buffer": "^6.0.3",
     "flatbuffers": "~1.12.0",
     "semver": "^7.3.5",
