--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -9,10 +9,12 @@
   "scripts": {
     "build": "npm run -s copy:public && npm run -s build:cjs",
     "build:ci": "npm run -s build && npm run -s build:esm",
-    "build:cjs": "tsc 1>&2 --outDir lib/cjs",
-    "build:esm": "tsc 1>&2 --module ES2020 --outDir lib/esm",
+    "build:cjs": "npm run -s copy:js:cjs && tsc 1>&2 --outDir lib/cjs",
+    "build:esm": "npm run -s copy:js:esm && tsc 1>&2 --module ES2020 --outDir lib/esm",
     "clean": "rimraf lib .rush/temp/package-deps*.json",
     "copy:public": "cpx \"./src/public/**/*\" ./lib/public",
+    "copy:js:cjs": "cpx \"./src/**/*.js\" ./lib/cjs",
+    "copy:js:esm": "cpx \"./src/**/*.js\" ./lib/esm",
     "docs": "betools docs --includes=../../generated-docs/extract --json=../../generated-docs/core/core-frontend/file.json --tsIndexFile=./core-frontend.ts --onlyJson --excludes=webgl/**/*,**/primitives,**/map/*.d.ts,**/tile/*.d.ts,**/*-css.ts",
     "extract-api": "betools extract-api --entry=core-frontend && npm run extract-extension-api",
     "extract-extension-api": "eslint --no-eslintrc -c \"../../tools/eslint-plugin/dist/configs/extension-exports-config.js\" \"./src/**/*.ts\" 1>&2",
@@ -90,6 +92,9 @@
     "NOTE: core-frontend should remain UI technology agnostic, so no react/angular dependencies are allowed"
   ],
   "dependencies": {
+    "@itwin/object-storage-azure": "1.0.0",
+    "@itwin/cloud-agnostic-core": "1.0.0",
+    "@itwin/object-storage-core": "1.0.0",
     "@itwin/core-i18n": "workspace:*",
     "@itwin/core-telemetry": "workspace:*",
     "@loaders.gl/core": "^3.1.6",
@@ -101,7 +106,8 @@
     "semver": "^7.3.5",
     "superagent": "7.1.3",
     "wms-capabilities": "0.4.0",
-    "xml-js": "~1.6.11"
+    "xml-js": "~1.6.11",
+    "reflect-metadata": "0.1.13"
   },
   "nyc": {
     "extends": "./node_modules/@itwin/build-tools/.nycrc"
