pin classnames to 2.3.1 because 2.3.2 contains breaking changes.

--- a/ui/components-react/package.json
+++ b/ui/components-react/package.json
@@ -121,7 +121,7 @@
     "@itwin/itwinui-react": "~1.42.0",
     "@types/shortid": "~0.0.29",
     "callable-instance2": "1.0.0",
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "eventemitter2": "^5.0.1",
     "immer": "9.0.6",
     "immutable": "^3.8.2",
