--- a/ui/appui-layout-react/package.json
+++ b/ui/appui-layout-react/package.json
@@ -99,7 +99,7 @@
   "dependencies": {
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "~1.42.0",
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "immer": "9.0.6",
     "lodash": "^4.17.10",
     "react-transition-group": "^4.4.2",
