--- a/ui/core-react/package.json
+++ b/ui/core-react/package.json
@@ -101,7 +101,7 @@
     "@bentley/icons-generic-webfont": "^1.0.15",
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "~1.42.0",
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "dompurify": "^2.0.12",
     "lodash": "^4.17.10",
     "react-autosuggest": "^10.1.0",
