--- a/ui/imodel-components-react/package.json
+++ b/ui/imodel-components-react/package.json
@@ -118,7 +118,7 @@
     "@itwin/itwinui-css": "0.x",
     "@itwin/itwinui-react": "~1.42.0",
     "callable-instance2": "1.0.0",
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "eventemitter2": "^5.0.1",
     "immer": "9.0.6",
     "immutable": "^3.8.2",
